Add support for Node v12 and v14

--- a/experimental/nodejs/BUILD
+++ b/experimental/nodejs/BUILD
@@ -2,12 +2,16 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
-[container_image(
-    name = "nodejs" if (not mode) else mode[1:],
-    base = "//cc" + mode,
+NODEJS_MAJOR_VERISONS = ("10", "12", "14")
+
+[
+    container_image(
+    name = "nodejs" + major_version + ("" if (not mode) else mode),
+    base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug"),
     entrypoint = ["/nodejs/bin/node"],
-    tars = ["@nodejs//:tar"],
+    tars = ["@nodejs" + major_version + "//:tar"],
 ) for mode in [
     "",
-    ":debug",
-]]
+    "_debug",
+]
+for major_version in NODEJS_MAJOR_VERISONS]
