--- a/examples/nodejs/Dockerfile
+++ b/examples/nodejs/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:10.17.0 AS build-env
+FROM node:10 AS build-env
 ADD . /app
 WORKDIR /app
 
 RUN npm ci --only=production
 
-FROM gcr.io/distroless/nodejs
+FROM gcr.io/distroless/nodejs:10
 COPY --from=build-env /app /app
 WORKDIR /app
 CMD ["hello.js"]
