--- a/examples/nodejs/node-express/Dockerfile
+++ b/examples/nodejs/node-express/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:10.17.0 AS build-env
+FROM node:10 AS build-env
 ADD . /app
 WORKDIR /app
 RUN npm install --production
 
-FROM gcr.io/distroless/nodejs
+FROM gcr.io/distroless/nodejs:10
 COPY --from=build-env /app /app
 WORKDIR /app
 EXPOSE 3000
