Format code using buildifier

--- a/experimental/nodejs/BUILD
+++ b/experimental/nodejs/BUILD
@@ -6,12 +6,14 @@ NODEJS_MAJOR_VERISONS = ("10", "12", "14")
 
 [
     container_image(
-    name = "nodejs" + major_version + ("" if (not mode) else mode),
-    base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug"),
-    entrypoint = ["/nodejs/bin/node"],
-    tars = ["@nodejs" + major_version + "//:tar"],
-) for mode in [
-    "",
-    "_debug",
+        name = "nodejs" + major_version + ("" if (not mode) else mode),
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug"),
+        entrypoint = ["/nodejs/bin/node"],
+        tars = ["@nodejs" + major_version + "//:tar"],
+    )
+    for mode in [
+        "",
+        "_debug",
+    ]
+    for major_version in NODEJS_MAJOR_VERISONS
 ]
-for major_version in NODEJS_MAJOR_VERISONS]
