Changed: buildifier linting and package versions updated

--- a/experimental/php-fpm/BUILD
+++ b/experimental/php-fpm/BUILD
@@ -10,53 +10,147 @@ load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
 load(":php-extensions.bzl", "php_extensions")
 
 PHP_VERSION = "7.3"
+
 # www-data user UID
 WWW_DATA = 33
 
 # Dictionary that contains all the enabled extensions, their priorities and source paths
 PHP_EXT = {
-    'calendar': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/calendar.ini'},
-    'ctype': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/ctype.ini'},
-    'dom': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/dom.ini'},
-    'exif': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/exif.ini'},
-    'fileinfo': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/fileinfo.ini'},
-    'ftp': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/ftp.ini'},
-    'gd': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-gd/gd/gd.ini'},
-    'gettext': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/gettext.ini'},
-    'iconv': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/iconv.ini'},
-    'json': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-json/json/json.ini'},
-    'mbstring': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-mbstring/mbstring/mbstring.ini'},
-    'mysqlnd': { 'prio': '10', 'path': '/usr/share/php' + PHP_VERSION + '-mysql/mysql/mysqlnd.ini'},
-    'opcache': { 'prio': '10', 'path': '/usr/share/php' + PHP_VERSION + '-opcache/opcache/opcache.ini'},
-    'pdo_mysql': { 'prio': '10', 'path': '/usr/share/php' + PHP_VERSION + '-mysql/mysql/pdo_mysql.ini'},
-    'pdo': { 'prio': '10', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/pdo.ini'},
-    'phar': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/phar.ini'},
-    'posix': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/posix.ini'},
-    'readline': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-readline/readline/readline.ini'},
-    'shmop': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/shmop.ini'},
-    'simplexml': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/simplexml.ini'},
-    'sockets': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/sockets.ini'},
-    'sysvmsg': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/sysvmsg.ini'},
-    'sysvsem': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/sysvsem.ini'},
-    'sysvshm': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/sysvshm.ini'},
-    'tokenizer': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-common/common/tokenizer.ini'},
-    'wddx': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/wddx.ini'},
-    'xml': { 'prio': '15', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/xml.ini'},
-    'xmlreader': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/xmlreader.ini'},
-    'xmlwriter': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/xmlwriter.ini'},
-    'xsl': { 'prio': '20', 'path': '/usr/share/php' + PHP_VERSION + '-xml/xml/xsl.ini'},
+    "calendar": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/calendar.ini",
+    },
+    "ctype": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/ctype.ini",
+    },
+    "dom": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/dom.ini",
+    },
+    "exif": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/exif.ini",
+    },
+    "fileinfo": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/fileinfo.ini",
+    },
+    "ftp": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/ftp.ini",
+    },
+    "gd": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-gd/gd/gd.ini",
+    },
+    "gettext": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/gettext.ini",
+    },
+    "iconv": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/iconv.ini",
+    },
+    "json": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-json/json/json.ini",
+    },
+    "mbstring": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-mbstring/mbstring/mbstring.ini",
+    },
+    "mysqlnd": {
+        "prio": "10",
+        "path": "/usr/share/php" + PHP_VERSION + "-mysql/mysql/mysqlnd.ini",
+    },
+    "opcache": {
+        "prio": "10",
+        "path": "/usr/share/php" + PHP_VERSION + "-opcache/opcache/opcache.ini",
+    },
+    "pdo_mysql": {
+        "prio": "10",
+        "path": "/usr/share/php" + PHP_VERSION + "-mysql/mysql/pdo_mysql.ini",
+    },
+    "pdo": {
+        "prio": "10",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/pdo.ini",
+    },
+    "phar": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/phar.ini",
+    },
+    "posix": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/posix.ini",
+    },
+    "readline": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-readline/readline/readline.ini",
+    },
+    "shmop": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/shmop.ini",
+    },
+    "simplexml": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/simplexml.ini",
+    },
+    "sockets": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/sockets.ini",
+    },
+    "sysvmsg": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/sysvmsg.ini",
+    },
+    "sysvsem": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/sysvsem.ini",
+    },
+    "sysvshm": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/sysvshm.ini",
+    },
+    "tokenizer": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-common/common/tokenizer.ini",
+    },
+    "wddx": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/wddx.ini",
+    },
+    "xml": {
+        "prio": "15",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/xml.ini",
+    },
+    "xmlreader": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/xmlreader.ini",
+    },
+    "xmlwriter": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/xmlwriter.ini",
+    },
+    "xsl": {
+        "prio": "20",
+        "path": "/usr/share/php" + PHP_VERSION + "-xml/xml/xsl.ini",
+    },
 }
 
 PHP_LINKS = {
-        "/usr/bin/php": "/usr/bin/php" + PHP_VERSION,
-        "/usr/sbin/php-fpm": "/usr/sbin/php-fpm" + PHP_VERSION
+    "/usr/bin/php": "/usr/bin/php" + PHP_VERSION,
+    "/usr/sbin/php-fpm": "/usr/sbin/php-fpm" + PHP_VERSION,
 }
 
 distro_suffix = "_debian10"
 
 container_layer(
     name = "php_dirs",
-    empty_dirs = ["/run/php", "/var/lib/php/modules/" + PHP_VERSION + "/registry"],
+    empty_dirs = [
+        "/run/php",
+        "/var/lib/php/modules/" + PHP_VERSION + "/registry",
+    ],
     mode = "755",
 )
 
@@ -71,10 +165,10 @@ container_layer(
 # Create a passwd file with a nonroot user and uid.
 passwd_entry(
     name = "www-data_user",
-    info = "www-data",
-    uid = WWW_DATA,
     gid = WWW_DATA,
     home = "/var/www",
+    info = "www-data",
+    uid = WWW_DATA,
     username = "www-data",
 )
 
@@ -87,9 +181,9 @@ passwd_file(
 
 group_entry(
     name = "www-data_group",
-    groupname = "www-data",
     gid = WWW_DATA,
-    users = [ "www-data" ],
+    groupname = "www-data",
+    users = ["www-data"],
 )
 
 group_file(
@@ -117,7 +211,7 @@ pkg_tar(
     name = "php_fpm_www_pool",
     srcs = ["conf/zz-www.conf"],
     mode = "0644",
-    package_dir = "etc/php/" + PHP_VERSION + "/fpm/pool.d/"
+    package_dir = "etc/php/" + PHP_VERSION + "/fpm/pool.d/",
 )
 
 # Builds php-cli image with base extensions: common + json + opcache + readline
@@ -125,8 +219,6 @@ pkg_tar(
 [container_image(
     name = ("php-fpm" if (not mode) else mode[1:]) + PHP_VERSION,
     base = "//cc" + (mode if mode else ":cc") + distro_suffix,
-    layers = ["php_dirs", "php_sessions"],
-    tars = [":passwd_tar", ":group_tar", ":php_fpm_www_pool"],
     debs = [
         packages["libapparmor1"],
         packages["libargon2-1"],
@@ -180,10 +272,19 @@ pkg_tar(
     entrypoint = [
         "/usr/sbin/php-fpm",
         "-F",
-        "-O"
+        "-O",
     ],
     env = {"LANG": "C.UTF-8"},
+    layers = [
+        "php_dirs",
+        "php_sessions",
+    ],
     symlinks = dict(php_extensions(PHP_EXT, PHP_VERSION).items() + PHP_LINKS.items()),
+    tars = [
+        ":passwd_tar",
+        ":group_tar",
+        ":php_fpm_www_pool",
+    ],
 ) for mode in [
     "",
     ":debug",
