Cleanup and improve reproducibility of builds (#553)
* Clean up package manager files
* Added dpkg_extract and tar utility for reproducible tars
* Add test case for build release tar
* Migrate java cacert extraction
* Updated to archive.py from pkg_tar
* Fix tar mode to GNU_TAR for consistency
* Use build_tar utility
* Fix /etc/os-release file to 0644 file permissions.
* Added copyright for libc-bin back to the files.
Set default mode to 0644.

--- a/cacerts/BUILD
+++ b/cacerts/BUILD
@@ -1,6 +1,15 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//:__subpackages__"])
 
-sh_binary(
-    name = "extract_certs",
-    srcs = ["extract.sh"],
-)
+load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
+load(":cacerts.bzl", "cacerts")
+load(":java.bzl", "cacerts_java")
+
+[cacerts(
+    name = "cacerts" + distro_suffix,
+    deb = DISTRO_PACKAGES[distro_suffix]["ca-certificates"],
+) for distro_suffix in DISTRO_SUFFIXES]
+
+[cacerts_java(
+    name = "cacerts_java" + distro_suffix,
+    cacerts_tar = ":cacerts" + distro_suffix,
+) for distro_suffix in DISTRO_SUFFIXES]
