--- a/locale/BUILD
+++ b/locale/BUILD
@@ -1,6 +1,9 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//:__subpackages__"])
 
-sh_binary(
-    name = "extract_locale",
-    srcs = ["extract.sh"],
-)
+load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
+load(":locale.bzl", "locale")
+
+[locale(
+    name = "locale" + distro_suffix,
+    deb = DISTRO_PACKAGES[distro_suffix]["libc-bin"],
+) for distro_suffix in DISTRO_SUFFIXES]
