Changed: fixed expose php incorrect flag

--- a/experimental/php-fpm/conf/zz-www.conf
+++ b/experimental/php-fpm/conf/zz-www.conf
@@ -5,5 +5,5 @@ access.log = /proc/self/fd/2;
 catch_workers_output = yes;
 clear_env = no;
 decorate_workers_output = no;
-expose_php = off;
 listen = 9000;
+php_flag[expose_php] = off;
