--- a/experimental/nodejs/BUILD
+++ b/experimental/nodejs/BUILD
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
-DISTRO_SUFFIXES = ("_debian9", "_debian10")
+load("//base:distro.bzl", "DISTRO_SUFFIXES")
 
 NODEJS_MAJOR_VERISONS = ("10", "12", "14")
 
